--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
         
         <div class="hero-section">
             <h1 class="hero-title">Learn Sign Language With Signlinguo Today</h1>
-            <p class="hero-description">Enter into this creative world. Discover how the latest NFTs or start creating your own!</p>
+            <p class="hero-description">Let's learn sign language in a new and fun way!</p>
             
             <div class="hero-buttons">
                 <button class="btn btn-white">Discover now</button>
@@ -60,7 +60,7 @@
                 <h3 class="section-title">Learning Modules</h3>
                 
                 <div class="tabs">
-                    <div class="tab active">Basic</div>
+                    <div class="tab active">Basics</div>
                     <div class="tab">Quiz</div>
                     <div class="tab">Transportation</div>
                     <div class="tab">Family</div>
