--- a/templates/home.html
+++ b/templates/home.html
@@ -61,8 +61,8 @@
                 
                 <div class="tabs">
                     <div class="tab active">Basics</div>
+                    <div class="tab">Games</div>
                     <div class="tab">Quiz</div>
-                    <div class="tab">Transportation</div>
                     <div class="tab">Family</div>
                 </div>
             </div>
