--- a/templates/login.html
+++ b/templates/login.html
@@ -13,58 +13,49 @@
     <button class="close-button">×</button>
     <button class="login-button">LOGIN</button>
     
-    <div class="card">
-        <h2>Create your profile</h2>
-        
-        <div class="form-group age-input">
-            <input type="number" placeholder="Age" id="age">
-            <span class="question-mark">?</span>
+    <form class="container" id="signup-form">
+        <h1>Create your profile</h1>
+
+            <input type="number" placeholder="Age" name="age">
+            <input type="text" placeholder="Name (optional)" name="name">
+            <input type="email" placeholder="Email" name="email">
+            <input type="password" placeholder="Password" name="password">
         </div>
-        
-        <div class="form-group">
-            <input type="text" placeholder="Name (optional)" id="name">
-        </div>
-        
-        <div class="form-group">
-            <input type="email" placeholder="Email" id="email">
-        </div>
-        
-        <div class="form-group">
-            <input type="password" placeholder="Password" id="password">
-        </div>
-        
-        <button class="create-button">CREATE ACCOUNT</button>
-        
+    
+        <button type="submit" class="create-account-btn">CREATE ACCOUNT</button>
+    
         <div class="divider">
-            <span>OR</span>
+            <hr><span>OR</span><hr>
         </div>
-        
+    
         <div class="social-buttons">
-            <button class="social-button">
-                <svg width="18" height="18" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path fill="#3b5998" d="M20.007 3H3.993C3.445 3 3 3.445 3 3.993v16.014c0 .548.445.993.993.993h8.621v-6.97H10.27v-2.874h2.345V9.17c0-2.325 1.42-3.591 3.494-3.591.993 0 1.847.074 2.096.107v2.43h-1.438c-1.128 0-1.346.537-1.346 1.324v1.734h2.69l-.35 2.874h-2.34V21h4.587c.548 0 .993-.445.993-.993V3.993c0-.548-.445-.993-.993-.993z"/>
+            <button type="button" class="social-btn">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="#1877F2">
+                    <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
                 </svg>
-                FACEBOOK
+                <span>FACEBOOK</span>
             </button>
-            <button class="social-button">
-                <svg width="18" height="18" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path fill="#4285F4" d="M12.24 10.285V14.4h6.806c-.275 1.765-2.056 5.174-6.806 5.174-4.095 0-7.439-3.389-7.439-7.574s3.345-7.574 7.439-7.574c2.33 0 3.891.989 4.785 1.849l3.254-3.138C18.189 1.186 15.479 0 12.24 0c-6.635 0-12 5.365-12 12s5.365 12 12 12c6.926 0 11.52-4.869 11.52-11.726 0-.788-.085-1.39-.189-1.989H12.24z"/>
+            <button type="button" class="social-btn">
+                <svg width="20" height="20" viewBox="0 0 24 24">
+                    <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+                    <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+                    <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+                    <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
                 </svg>
-                GOOGLE
+                <span>GOOGLE</span>
             </button>
         </div>
-        
-        <div class="terms">
-            By signing in to SignInApp, you agree to our <a href="#">Terms</a> and 
+    
+        <p class="terms-text">
+            By signing in to Signlingo, you agree to our <a href="#">Terms</a> and 
             <a href="#">Privacy Policy</a>.
-        </div>
-        
-        <div class="captcha-notice">
+        </p>
+    
+        <p class="captcha-text">
             This site is protected by reCAPTCHA Enterprise and the 
             Google <a href="#">Privacy Policy</a> and <a href="#">Terms of Service</a> apply.
-        </div>
-    </div>
-
+        </p>
+    </form>
     <script src="signinlogic.js"></script>
 </body>
 </html>
