Fixed login, implemented backend.

--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <button class="close-button">×</button>
-    <button class="login-button">LOGIN</button>
+    <button class="login-button" onclick="window.location.href='/login'">LOGIN</button>
     
     <form class="container" id="signup-form" method="POST">
         {% if error %}
