--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,6 +8,7 @@
 <body>
 
     <button onclick="window.location.href='/register'">Sign Up</button>
+    <button onclick="window.location.href='/login'">Login</button>
 
 </body>
 </html>
