--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/signstyle.css">
+    <link rel="stylesheet" href="../static/signstyle.css">
 </head>
 <body>
     <button class="close-button">×</button>
@@ -58,6 +58,6 @@
             Google <a href="#">Privacy Policy</a> and <a href="#">Terms of Service</a> apply.
         </p>
     </form>
-    <script src="signinlogic.js"></script>
+    <script src="../static/signinlogic.js"></script>
 </body>
 </html>
