--- a/templates/login.html
+++ b/templates/login.html
@@ -7,11 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/loginstyle.css">
+    <link rel="stylesheet" href="../static/loginstyle.css">
 </head>
 <body>
 
 <button class="close-button">×</button>
+<button class="sign-up" onclick="window.location.href='/register'">SIGN UP</button>
 
     <div class="login-container">
         <h1>Log in</h1>
@@ -58,6 +59,6 @@
         </p>
     </div>
     
-    <script src="loginlogic.js"></script>
+    <script src="../static/loginlogic.js"></script>
 </body>
 </html>
