--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIGNLINGO Dashboard</title>
-    <link rel="stylesheet" href="/static/homestyle.css">
+    <link rel="stylesheet" href="../static/homestyle.css">
     <script src="https://kit.fontawesome.com/7fb2b68ee1.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
