--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -53,7 +53,7 @@
         <div class="feature-card">
           <div class="feature-icon">🧩</div>
           <h3>Personalized learning</h3>
-          <p>Combining the best of AI and language science, lessons are tailored to help you learn.</p>
+          <p>Combining the best  and language science, lessons are tailored to help you learn.</p>
         </div>
         <div class="feature-card">
           <div class="feature-icon">🦉</div>
