Editing landing page(footer)

--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -171,7 +171,7 @@
             <button class="button">
               <div class="get-started-wrapper"><div class="get-started">GET STARTED</div></div>
             </button>
-            <p class="p">Learn a language with Signlingo.</p>
+            <p class="p">Learn a language with Signlingo</p>
           </div>
         </div>
       </div>
