Refactor the Close button logic, close -> landing

--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../static/signstyle.css">
 </head>
 <body>
-    <button class="close-button">×</button>
+    <button class="close-button" onclick="window.location.href='/'">×</button>
     <button class="login-button" onclick="window.location.href='/login'">LOGIN</button>
     
     <form class="container" id="signup-form" method="POST">
