--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<button class="close-button">×</button>
+<button class="close-button" onclick="window.location.href='/'">×</button>
 <button class="sign-up" onclick="window.location.href='/register'">SIGN UP</button>
 
     <div class="login-container">
