Added language options in landing page carousel

--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -30,8 +30,8 @@
   <div class="language-carousel">
     <button class="carousel-nav nav-left">‹</button>
     <div class="carousel-container">
-      <div class="language-option">SPANISH</div>
-      <div class="language-option">FRENCH</div>
+      <div class="language-option">ENGLISH</div>
+      <div class="language-option">INDONESIAN</div>
       <div class="language-option">GERMAN</div>
       <div class="language-option">ITALIAN</div>
       <div class="language-option">PORTUGUESE</div>
