--- a/static/loginstyle.css
+++ b/static/loginstyle.css
@@ -45,6 +45,40 @@ body {
     box-shadow: 0 0 0 2px #FFF08C;
 }
 
+.error-message {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    width: 80%;
+    max-width: 500px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    padding: 15px;
+    text-align: center;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.fa-triangle-exclamation {
+    color: red;
+    font-size: 25px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    flex-shrink: 0;
+
+}
+
+.error {
+    color: red;
+    font-size: 15px;
+    font-weight: bold;
+}
+
 
 h1 {
     font-size: 24px;
