--- a/static/loginstyle.css
+++ b/static/loginstyle.css
@@ -43,7 +43,7 @@ h1 {
 
 input[type="text"],
 input[type="password"] {
-  width: 100%;
+  width: 95%;
   padding: 0.75rem;
   margin-bottom: 1.2rem;
   border: 1px solid var(--border);
@@ -64,7 +64,8 @@ input::placeholder {
 .forgot-link {
   position: absolute;
   right: 0.75rem;
-  top: 50%;
+  top: 35%;
+  left: 83%;
   transform: translateY(-50%);
   font-size: 0.8rem;
   text-decoration: none;
