--- a/static/signstyle.css
+++ b/static/signstyle.css
@@ -25,10 +25,10 @@ body {
 
 .container {
   background: var(--white);
-  padding: 2.5rem 2rem;
+  padding: 2.5rem 2.5rem;
   border-radius: 16px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
-  width: 380px;
+  width: 400px;
   text-align: center;
 }
 
@@ -43,7 +43,7 @@ input[type="text"],
 input[type="email"],
 input[type="password"],
 input[type="number"] {
-  width: 100%;
+  width: 95%;
   padding: 0.75rem;
   margin-bottom: 1rem;
   border: 1px solid var(--border);
@@ -51,6 +51,7 @@ input[type="number"] {
   font-size: 1rem;
   background: var(--white);
   color: var(--text-main);
+  margin-right: 100px;
 }
 
 input::placeholder {
