Created backend template for gamepage

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -83,7 +83,7 @@
                             </div>
                             <span>4/5</span>
                         </div>
-                        <button class="card-button">Learn</button>
+                        <button class="card-button" onclick="window.location.href='/gamepage'">Learn</button>
                     </div>
                 </div>
                 
