Fixed the location of the error message in the signup page, Added the warning icon in login error message, corrected the css link that was previously written incorrectly of gamepage to ensure the game page adopts the design

--- a/templates/gamepage.html
+++ b/templates/gamepage.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Quiz Game</title>
-  <link rel="stylesheet" href="/static/gamestyle.css">
-  <script src="/static/gamelogic.js"></script>
+  <link rel="stylesheet" href="../static/gamestyle.css">
+  <script src="../static/gamelogic.js"></script>
 </head>
 <body>
   <div id="quiz-container">
